--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     <div class="container"></div>
-      <div id="hello"></div>
+      <div id="app" ></div>
   </body>
   <script src="/bundle.js"></script>
 </html>
